# dungeon_bevy

./: .gitignore  Cargo.toml  LICENSE.md  README.md  generation.txt  leaf_data.txt  resources.txt
maps/: test.ldtk
src/: components.rs  functions.rs  main.rs  plugins.rs  resources.rs  systems.rs
src/components/: camera.rs  person.rs  player.rs
src/plugins/: dungeon_gen.rs  game_state_plugin.rs  hello_plugin.rs  inspections.rs  main_menu.rs  tilemap_debug.rs  world_generation.rs
src/resources/: assets.rs
src/systems/: basic_setup.rs  dungeon_gen.rs  people.rs  player.rs  world_gen.rs
