[package]
name = "bevygame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_asset_loader = { version = "0.12.1", features = ["2d", "dynamic_assets"] }
bevy_ecs_tilemap = { version = "0.8.0", features = ["atlas"] }
noise = { version = "0.8", features = [] }
rand = "0.8.5"
sysinfo = "0.26.7"
